--- a/index.html
+++ b/index.html
@@ -34,28 +34,43 @@
                         NIKKY-BEADS
                     </a>
                         </li>
-                        <li>
-                            <a href="#">Latest</a>
-                        </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="#">Latest</a>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Designs</a>
                         </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Overview</a>
                         </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Events</a>
                         </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
                         <li>
                             <a href="#">About</a>
                         </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Services</a>
                         </li>
+                        </ul>
+                        <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Contact</a>
                         </li>
                     </ul>
+
             </nav>
             </div>
         </div>
