--- a/index.html
+++ b/index.html
@@ -34,38 +34,38 @@
                         NIKKY-BEADS
                     </a>
                         </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
-                            <li>
-                                <a href="#">Latest</a>
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">Latest</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Designs</a>
                         </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Overview</a>
                         </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Events</a>
                         </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="#">About</a>
                         </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Services</a>
                         </li>
-                        </ul>
-                        <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="#">Contact</a>
                         </li>
@@ -135,7 +135,9 @@
             $("#wrapper").toggleClass("toggled");
         });
     </script>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
