--- a/latest.html
+++ b/latest.html
@@ -36,7 +36,7 @@
                     </ul>
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="latest.html">Latest</a>
+                            <a href="#">Latest</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav">
@@ -82,12 +82,12 @@
                     <div class="row">
                         <div class="col">
                             <h1 class='font-effect-shadow-multiple'>Nikky-Beads<span>Creation</span></h1>
-                            <p class="h3-header">Try our hand made beads</p>
+                            <p class="h3-header">Try our latest beads</p>
                             <p>We create the best design.</p>
                             <a href="#wrapper" class="btn btn-secondary" id="menu-toggle">Click Here</a>
                             <div class="col">
                                 <p class='heading-3'>Try our Beads</p>
-                                <h4 class='3d-float'>And Never Feel The Same</h4>
+                                <h4 class='3d-float'></h4>
                             </div>
                             <div class="col">
                                 <p class='heading-3'>Beady Stuffs</p>
@@ -96,6 +96,36 @@
                                 <br/>
                                 <span>promise to reply A.S.A.P </span>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="flex">
+                    <div class="row">
+                        <div class="col">
+                            <h1 class='font-effect-shadow-multiple'>Nikky-Beads<span>Creation</span></h1>
+                            <p class="h3-header">Try our latest beads</p>
+                            <p>We create the best design.</p>
+                            <a href="#wrapper" class="btn btn-secondary" id="menu-toggle">Click Here</a>
+                            <div class="col">
+                                <p class='heading-3'></p>
+                                <h4 class='3d-float'></h4>
+                            </div>
+                            <div class="col">
+                                <p class='heading-3'>Beady Stuffs</p>
+                                <p class="h3-heading">Want to get in touch with us,be it to requestmore info about our products, tips on how to solve soduku,random question about the universe or the meaning of life, just feel free to drop me a line anytime.. </p>
+                                <br/>
+                                <span>promise to reply A.S.A.P </span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4"></div>
+
                         </div>
                     </div>
                 </div>
